Fix issues with z-indexes and overlapping

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .headerSectionContainer {
     width: 100%;
     position: relative;
-    z-index: 1111;
+    z-index: 1000;
 }
 
 .header {
@@ -15,19 +15,7 @@
     position: fixed;
     background-color: #ffffff;
     height: 180px;
-}
-
-/* Adding the separator line with ::after */
-.header::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px; /* Line thickness */
-    background-color: rgba(0, 0, 0, 0.115); /* Line color */
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 1001;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .airbnbHomeButton {
